added styling to navbar

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <nav class="navbar">
+    <div class="navLinks">
         <a href="https://google.com">HOME</a>
-        <a href="https://google.com">Page 1</a>
-        <a href="https://google.com">Page 2</a>
-        <a href="https://google.com">Page 3</a>
-        <a href="https://google.com">Page 4</a>
-        <a href="https://google.com">Page 5</a>
-        <a href="https://google.com">Contact Us</a>
+        <a href="https://google.com">Membership Information</a>
+        <a href="https://google.com">About</a>
+        <a href="https://google.com">Contact</a>
+        <a href="https://google.com">Login/Sign</a>
         <a href="https://google.com">Support</a>
+        </div>
 </nav>
 <body>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed atque voluptatibus, porro dolore quisquam exercitationem assumenda molestias beatae quasi! Hic labore ullam et debitis nostrum soluta adipisci eos perspiciatis quae.</p>
