trying to fix this

--- a/index.html
+++ b/index.html
@@ -26,14 +26,22 @@
 </body>
 <footer>
     <nav class="footnav">
+        <section>
         <a href="https://google.com">HOME</a>
         <a href="https://google.com">Page 1</a>
+        </section>
+
+        <section>
         <a href="https://google.com">Page 2</a>
         <a href="https://google.com">Page 3</a>
+        </section>
+        <section>
         <a href="https://google.com">Page 4</a>
         <a href="https://google.com">Page 5</a>
+        </section>
         <a href="https://google.com">Contact Us</a>
         <a href="https://google.com">Support</a>
+        </section>
     </nav>
 </footer>
 </html>
