--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
     <nav class="footnav">
         <section>
         <a href="https://google.com">HOME</a>
-        <a href="https://google.com">Page 1</a>
-        </section>
-
-        <section>
-        <a href="https://google.com">Page 2</a>
-        <a href="https://google.com">Page 3</a>
+        <a href="https://google.com">SCHEDULE</a>
         </section>
         <section>
-        <a href="https://google.com">Page 4</a>
-        <a href="https://google.com">Page 5</a>
+        <a href="https://google.com">CLASSES</a>
+        <a href="https://google.com">NUTRITION</a>
         </section>
-        <a href="https://google.com">Contact Us</a>
-        <a href="https://google.com">Support</a>
+        <section>
+        <a href="https://google.com">STAFF</a>
+        <a href="https://google.com">LOCATIONS</a>
+        </section>
+        <section>
+        <a href="https://google.com">CONTACT US</a>
+        <a href="https://google.com">SUPPORT</a>
         </section>
     </nav>
 </footer>
