added images and body html

--- a/index.html
+++ b/index.html
@@ -18,11 +18,19 @@
         </div>
 </nav>
 <body>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed atque voluptatibus, porro dolore quisquam exercitationem assumenda molestias beatae quasi! Hic labore ullam et debitis nostrum soluta adipisci eos perspiciatis quae.</p>
+    <h1>Get Started Today With A Free Workout</h1>
+    <h2>Our friendly staff is here to help you every step of the way!</h2>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt ut dolores, ex qui dolor accusamus, cum optio magnam nam natus, corrupti a impedit facilis deleniti nesciunt soluta sit totam nisi.</p>
+    <p>From our massive cardio bay to our free weight area, you get to choose how <em>you</em> work out.</p>
 
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae nostrum maxime atque, veritatis inventore quasi, debitis suscipit, magni laborum doloribus cupiditate expedita itaque dolorem omnis ea quidem natus deleniti. Reprehenderit!</p>
+    <span class="image-gallery">
+    <img src="girl-running.jpeg">
+    <img src="gym-setup.jpeg">
+    <img src="weightrack.jpeg">
+    </span>
+
+    <p id="free-consult">Contact us today for your free consultation!</p>
+
 </body>
 <footer>
     <nav class="footnav">
