adjusted HTML sections

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Git Pair Programming Website</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<body>
+<header>
 <nav class="navbar">
     <div class="navLinks">
         <a href="https://google.com">HOME</a>
@@ -17,7 +19,8 @@
         <a href="https://google.com">Support</a>
         </div>
 </nav>
-<body>
+</header>
+    <section>
     <h1>Get Started Today With A Free Workout</h1>
     <h2>Our friendly staff is here to help you every step of the way!</h2>
 
@@ -30,8 +33,8 @@
     </span>
 
     <p id="free-consult">Contact us today for your free consultation!</p>
+    </section>
 
-</body>
 <footer>
     <nav class="footnav">
         <section>
@@ -52,5 +55,6 @@
         </section>
     </nav>
 </footer>
+</body>
 </html>
 
