updated individual photos

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     <p>From our massive cardio bay to our free weight area, you get to choose how <em>you</em> work out.</p>
 
     <span class="image-gallery">
-    <img src="girl-running.jpeg">
-    <img src="gym-setup.jpeg">
-    <img src="weightrack.jpeg">
+    <img id="photo1" src="girl-running.jpeg">
+    <img id="photo2" src="gym-setup.jpeg">
+    <img id="photo3" src="weightrack.jpeg">
     </span>
 
     <p id="free-consult">Contact us today for your free consultation!</p>
