--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
     </span>
 
     <p id="free-consult">Contact us today for your free consultation!</p>
-    </section>
+    <!-- I added this comment -->    
+</section>
 
 <footer>
     <nav class="footnav">
